--- a/index.html
+++ b/index.html
@@ -3,17 +3,21 @@
   <head>
     <meta charset="utf-8">
     <title></title>
-    <script src="./note-model.js"></script>
+    <script src="./model/note-model.js"></script>
     <script src="./assert.js"></script>
-    <script src="./note-model-tests.js"></script>
-    <script src="./note-list-model.js"></script>
-    <script src="./note-list-model-tests.js"></script>
-    <script src="./note-list-view.js"></script>
-    <script src="./note-list-view-tests.js"></script>
+    <script src="./test/note-model-tests.js"></script>
+    <script src="./model/note-list-model.js"></script>
+    <script src="./test/note-list-model-tests.js"></script>
+    <script src="./view/note-list-view.js"></script>
+    <script src="./test/note-list-view-tests.js"></script>
+
     <div id= "app"> Hello </div>
-    <script src="./note-controller.js"></script>
-    <script src="./note-controller-tests.js"></script>
-    <script> 
+    <script src="./controller/note-controller.js"></script>
+    <script src="./test/note-controller-tests.js"></script>
+    <script src="./view/single-note-view.js"></script>
+    <script src="./test/single-note-view-test.js"></script>
+
+    <script>
     var noteList = new NoteListModel();
     noteList.add("hi")
     noteList.add('2nd add')
@@ -25,4 +29,3 @@
   <body>
   </body>
 </html>
-
